fix(pu-dropdown): remove overflow hidden which hides tribes menu on the left

--- a/app/client/stylesheets/components/pu-dropdown.sass
+++ b/app/client/stylesheets/components/pu-dropdown.sass
@@ -149,7 +149,3 @@
 
         &-active
             display: block
-
-// fix for displacement scrollbar in chrome mac osx
-.pu-dropdown.pu-dropdown-profile.pu-profilemenu.pu-dropdown-active
-    overflow: hidden
